[package]
publish = false
name = "arborium-wire"
version = "0.622.0"
edition = "2024"
description = "Wire protocol types for arborium WASM plugins"
license = "MIT"
repository = "https://github.com/bearcove/arborium"

[features]
default = []
std = []

[dependencies]
facet = { git = "https://github.com/facet-rs/facet", rev = "e06efea69a5c104a861429a15d81182cc9b01c0b" }
facet-postcard = { git = "https://github.com/facet-rs/facet", rev = "e06efea69a5c104a861429a15d81182cc9b01c0b", features = ["alloc"] }
