[package]
publish = false
name = "arborium-wire"
version = "1.2.4"
edition = "2024"
description = "Wire protocol types for arborium WASM plugins"
license = "MIT"
repository = "https://github.com/bearcove/arborium"

[features]
default = []
std = []

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
