[package]
name = "arborium"
version = "0.622.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"
description = "Tree-sitter syntax highlighting with HTML rendering and WASM support"
keywords = ["tree-sitter", "syntax-highlighting", "wasm"]
categories = ["parsing", "text-processing", "wasm"]
links = "arborium"

[features]
default = []

# All languages
all-languages = [
    "lang-c",
]

# Individual language features
lang-c = ["dep:arborium-c"]

[dependencies]
arborium-tree-sitter = { version = "0.622.0", path = "../arborium-tree-sitter" }
arborium-theme = { version = "0.622.0", path = "../arborium-theme" }
arborium-highlight = { version = "0.622.0", path = "../arborium-highlight", features = ["tree-sitter"] }

# Optional grammar dependencies
arborium-c = { version = "0.622.0", path = "../../langs/group-birch/c/crate", optional = true }

[dev-dependencies]
indoc = "2"

# WASM allocator (automatically enabled on wasm targets)
[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = "0.2"
